# wealthbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.rst  RESUME.md  ROADMAP.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_household_integration.py  test_wealthbox.py
tests/test_cli/: conftest.py  test_auth.py  test_config.py  test_contacts.py  test_events.py  test_export.py  test_notes.py  test_opportunities.py  test_output.py  test_projects.py  test_readonly.py  test_tasks.py  test_workflows.py
wealthbox/: __init__.py  __main__.py
wealthbox/cli/: __init__.py  auth.py  common.py  config.py  constants.py  contacts.py  errors.py  events.py  export.py  main.py  notes.py  opportunities.py  output.py  projects.py  tasks.py  workflows.py
